Kubernetes/deployment_rolling.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-roll
spec:
  replicas: 4
  selector:
    matchLabels:
      app: echo
      tier: app
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 3
  template:
    metadata:
      labels:
        app: echo
        tier: app
    spec:
      containers:
      - name: echo
        image: ghcr.io/subicura/echo:v2
        livenessProbe:
          httpGet:
            path: /
            port: 3000
