Kubernetes/hostpath.yml
apiVersion: v1
kind: Pod
metadata:
  name: host-log
spec:
  containers:
  - name: log
    image: busybox
    args: ["/bin/sh", "-c", "sleep infinity"]
    volumeMounts:
    - name: varlog
      mountPath: /host/var/log
  volumes:
  - name: varlog
    hostPath:
      path: /var/log
