Kubernetes/livenessProbe.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample-rp
  labels:
    app: sampl
spec:
  containers:
  - name: app
    image: ghcr.io/subicura/echo:v1
    livenessProbe:
      httpGet:
        path: /not/exist
        port: 8080
      initialDelaySeconds: 5 # 5초 이후에 상태 확인
      timeoutSeconds: 2 # 요청에 대한 timeout 시간 설정 (Default : 1)
      periodSeconds: 5 # 5초마다 Pod 확인 (Default : 10)
      failureThreshold: 1 # 1번 실패하면 재시작 (Default : 3)
