Kubernetes/ingress_v2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-v2
spec:
  rules:
  - host: v2.ing.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ing-v2
            port:
              number: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo
      tier: app
      version: v2
  template:
    metadata:
      labels:
        app: echo
        tier: app
        version: v2
    spec:
      containers:
      - name: echo
        image: ghcr.io/subicura/echo:v2
        livenessProbe:
          httpGet:
            path: /
            port: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: echo-v2
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: echo
    tier: app
    version: v2
